--- a/HTML/highlight.js/index.html
+++ b/HTML/highlight.js/index.html
@@ -10,7 +10,8 @@
   <title>highlight.js</title>
 </head>
 <body>
-  <button onclick="more()" class="btn btn-success">參考網址</button>
+  <button onclick="window.location.href = 'https://highlightjs.org/static/demo/';" class="btn btn-success">More...</button>
+  <button onclick="window.location.href = 'https://ithelp.ithome.com.tw/articles/10194626';" class="btn btn-success">鐵人賽</button>
   <pre>
     <!-- 
       程式語言類別(列表[註1])
