--- a/ionic/Lesson1-Hello/src/pages/home/home.html
+++ b/ionic/Lesson1-Hello/src/pages/home/home.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item>
       <ion-label floating>Name</ion-label>
-      <ion-input type="text" placeholder="Name" [(ngModel)]="name"></ion-input>
+      <ion-input type="text" [(ngModel)]="name"></ion-input>
     </ion-item>
   
     <ion-item>
@@ -20,5 +20,3 @@
   </ion-list>
   <button ion-button block (click)="showAlert()">Show</button>
 </ion-content>
-
-
