--- a/ionic/Lesson2-Calculator/src/pages/home/home.html
+++ b/ionic/Lesson2-Calculator/src/pages/home/home.html
@@ -14,16 +14,17 @@
     <div class="btns">
         <ion-row>
           <ion-col col-3>
-            <button ion-button round color="dark" class="btn-item">C</button>
+            <button ion-button round color="dark" class="btn-item" *ngIf="num == 0" (click)="cleanAll()">C</button>
+            <button ion-button round color="dark" class="btn-item" *ngIf="num != 0" (click)="cleanNum()">AC</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color="dark" class="btn-item">+/-</button>
+            <button ion-button round color="dark" class="btn-item" (click)="negative()">+/-</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color="dark" class="btn-item">%</button>
+            <button ion-button round color="dark" class="btn-item" (click)="divisionHun()">%</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">÷</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="division()">÷</button>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -37,7 +38,7 @@
             <button ion-button round color = "dark" class="btn-item" (click)="addNum(9)">9</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">×</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="times()">×</button>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -51,7 +52,7 @@
             <button ion-button round color = "dark" class="btn-item" (click)="addNum(6)">6</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">-</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="minus()">-</button>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -65,18 +66,18 @@
             <button ion-button round color = "dark" class="btn-item" (click)="addNum(3)">3</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">＋</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="plus()">＋</button>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col col-6>
-            <button ion-button round color = "dark" full>0</button>
+            <button ion-button round color = "dark" (click)="addNum(0)" full>0</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">.</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="addDot()">.</button>
           </ion-col>
           <ion-col col-3>
-            <button ion-button round color = "dark" class="btn-item">=</button>
+            <button ion-button round color = "dark" class="btn-item" (click)="equals()">=</button>
           </ion-col>
         </ion-row>
     </div>
